--- a/BEPDev/src/main/resources/application.properties
+++ b/BEPDev/src/main/resources/application.properties
@@ -12,3 +12,17 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false  
 spring.jpa.properties.hibernate.format_sql=true
+
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=50MB
+#실제 파일 저장 디렉토리
+spring.servlet.multipart.location=e:/Temp/uploads/  
+#http://localhost:8080/api/upload
+
+# 분석 서버(Flask 등)
+app.analysis.base-url=http://localhost:5000
+# flask -> OK/ERROR ACK : end point
+app.analysis.run-endpoint=/api/run
+
+#logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=TRACE
